--- a/app/src/main/res/layout/dialog_about.xml
+++ b/app/src/main/res/layout/dialog_about.xml
@@ -12,12 +12,12 @@
         android:textColor="@color/color_FFFFFF"
         android:layout_width="@dimen/vs_600"
         android:layout_height="wrap_content"
-        android:text="许大师郑重声明:\n        本软件只提供聚合展示功能，所有资源来自互联网, 软件不参与任何制作, 上传, 储存, 下载等内容。软件仅供学习参考, 请于安装后24小时内删除。如体验感觉不错请扫描下方二维码进行打赏，谢谢！！"
+        android:text="许大师郑重声明：\n        本软件只提供聚合展示功能，所有资源来自互联网，软件不参与任何制作、上传、储存、下载等内容。软件仅供学习参考，请于安装后24小时内删除。如体验感觉不错请扫描下方二维码进行打赏，谢谢！！"
         android:lineSpacingExtra="@dimen/ts_50"
-        android:lineSpacingMultiplier="0.0"/>
+        android:lineSpacingMultiplier="0.0" />
     <ImageView
         android:layout_width="fill_parent"
         android:layout_height="200.0dip"
         android:layout_marginTop="5.0dip"
-        android:src="@drawable/xuameng"/>
+        android:src="@drawable/xuameng" />
 </LinearLayout>
