--- a/app/src/main/res/layout/player_vod_control_view.xml
+++ b/app/src/main/res/layout/player_vod_control_view.xml
@@ -147,10 +147,10 @@
                 android:focusable="true"
                 android:layout_width="0.0dip"
                 android:layout_height="wrap_content"
-                android:maxHeight="9mm"
+                android:maxHeight="9.0mm"
                 android:max="1000"
                 android:progressDrawable="@drawable/progress_bar_xu"
-                android:minHeight="9mm"
+                android:minHeight="9.0mm"
                 android:thumb="@drawable/shape_player_control_vod_seek_thumb"
                 android:thumbOffset="@dimen/vs_0"
                 android:layout_weight="1.0"
@@ -502,6 +502,7 @@
             android:id="@+id/tv_pause_progress_text"
             android:tag="vod_control_pause_t"
             android:paddingLeft="@dimen/vs_10"
+            android:ellipsize="marquee"
             android:focusable="false"
             android:focusableInTouchMode="false"
             android:layout_width="wrap_content"
