--- a/app/src/main/res/layout/epglist_item.xml
+++ b/app/src/main/res/layout/epglist_item.xml
@@ -1,73 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-android:orientation="horizontal"
-android:gravity="bottom"
-android:id="@+id/cl_epg"
-android:background="@drawable/shape_live_focus"
-android:focusable="true"
-android:padding="@dimen/vs_5"
-android:focusableInTouchMode="false"
-android:layout_width="match_parent"
-android:layout_height="wrap_content">
-
 <LinearLayout
-    android:id="@+id/touch"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:paddingLeft="6dp"
-    android:paddingRight="6dp"
-    android:paddingBottom="5dp"
-    android:paddingTop="5dp"
+    android:gravity="bottom"
+    android:orientation="horizontal"
+    android:id="@+id/cl_epg"
+    android:background="@drawable/shape_live_focus"
+    android:padding="@dimen/vs_5"
+    android:focusable="true"
+    android:focusableInTouchMode="false"
+    android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:layout_weight="1">
-
-    <TextView
-        android:textSize="@dimen/vs_15"
-        android:id="@+id/tv_epg_time"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="@android:color/white"/>
-		
-    <com.github.tvbox.osc.ui.tv.widget.MarqueeTextView
-        android:textSize="@dimen/ts_16"
-        android:ellipsize="marquee"
-        android:singleLine="true"
-        android:marqueeRepeatLimit="marquee_forever"
-        android:gravity="center|left"
-        android:id="@+id/tv_epg_name"
-        android:textColor="@android:color/white"
-        android:clickable="true"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-		
-</LinearLayout>
-
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <LinearLayout
-        android:layout_width="@dimen/vs_100"
+        android:orientation="vertical"
+        android:id="@+id/touch"
+        android:paddingLeft="6.0dip"
+        android:paddingTop="5.0dip"
+        android:paddingRight="6.0dip"
+        android:paddingBottom="5.0dip"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_weight="1.0">
+        <TextView
+            android:textSize="@dimen/vs_15"
+            android:textColor="@android:color/white"
+            android:id="@+id/tv_epg_time"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"/>
+        <TextView
+            android:textSize="@dimen/ts_16"
+            android:textColor="@android:color/white"
+            android:ellipsize="marquee"
+            android:gravity="center|left"
+            android:id="@+id/tv_epg_name"
+            android:clickable="true"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:singleLine="true"
+            android:focusableInTouchMode="true"
+            android:marqueeRepeatLimit="marquee_forever"/>
+    </LinearLayout>
+    <LinearLayout
         android:layout_gravity="center_vertical"
         android:orientation="vertical"
         android:paddingLeft="@dimen/vs_5"
-        android:paddingRight="@dimen/vs_5">
-
+        android:paddingRight="@dimen/vs_5"
+        android:layout_width="@dimen/vs_100"
+        android:layout_height="wrap_content">
         <TextView
+            android:textSize="@dimen/vs_15"
+            android:textColor="@color/color_FFFFFF"
+            android:gravity="center"
             android:id="@+id/shiyi"
+            android:background="@drawable/shape_setting_model_focus"
             android:layout_width="@dimen/vs_80"
             android:layout_height="@dimen/ts_26"
-            android:background="@drawable/shape_setting_model_focus"
-            android:gravity="center"
-            android:text="回看"
-            android:textColor="@color/color_FFFFFF"
-            android:textSize="@dimen/vs_15" />
-
+            android:text="回看"/>
         <com.github.tvbox.osc.ui.tv.widget.AudioWaveView
             android:id="@+id/wqddg_AudioWaveView"
             android:layout_width="@dimen/vs_80"
             android:layout_height="@dimen/ts_26"
-            android:layout_marginTop="3dp"
-            android:layout_marginRight="0px" />
+            android:layout_marginTop="3.0dip"
+            android:layout_marginRight="0.0px"/>
     </LinearLayout>
-
 </LinearLayout>
-
