--- a/app/src/main/res/layout/activity_live_play.xml
+++ b/app/src/main/res/layout/activity_live_play.xml
@@ -676,7 +676,7 @@
                     android:paddingBottom="5.0px"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="收看中"
+                    android:text="直播中"
                     android:singleLine="true"
                     android:layout_toRightOf="@+id/iv_circle_bg"
                     android:marqueeRepeatLimit="marquee_forever"/>
